// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error() should print a bold red object as error 1`] = `
Array [
  Array [
    "[31m[1m[ERROR]  {\\"message\\":\\"I am bold red error.\\"}[22m[39m",
  ],
]
`;

exports[`error() should print a bold red string as error 1`] = `
Array [
  Array [
    "[31m[1m[ERROR]  I am bold red error..[22m[39m",
  ],
]
`;

exports[`log() should print a white object string as log 1`] = `
Array [
  Array [
    "[INFO] ",
    "{\\"message\\":\\"I am white log\\"}",
  ],
]
`;

exports[`log() should print a white string as log 1`] = `
Array [
  Array [
    "[INFO] ",
    "I am white log.",
  ],
]
`;

exports[`warn() should print a yellow object as warning 1`] = `
Array [
  Array [
    "[33m[WARN]  {\\"message\\":\\"I am yellow warning.\\"}[39m",
  ],
]
`;

exports[`warn() should print a yellow string as warning 1`] = `
Array [
  Array [
    "[33m[WARN]  I am yellow warning.[39m",
  ],
]
`;
